--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content=" 小钻风123123 # hello world
-哈哈哈 # 咋地啦 # ">
+哈哈哈 # 咋地啦 # 没咋地 # ">
 <meta name="theme-color" content="#FFFFFF">
 <meta name="color-scheme" content="light dark"><meta property="og:title" content="" />
 <meta property="og:description" content="" />
@@ -109,7 +109,11 @@ https://github.com/alex-shpak/hugo-book
   
 <nav id="TableOfContents">
   <ul>
-    <li><a href="#咋地啦">咋地啦</a></li>
+    <li><a href="#咋地啦">咋地啦</a>
+      <ul>
+        <li><a href="#没咋地">没咋地</a></li>
+      </ul>
+    </li>
   </ul>
 </nav>
 
@@ -135,6 +139,10 @@ https://github.com/alex-shpak/hugo-book
   咋地啦
   <a class="anchor" href="#%e5%92%8b%e5%9c%b0%e5%95%a6">#</a>
 </h2>
+<h3 id="没咋地">
+  没咋地
+  <a class="anchor" href="#%e6%b2%a1%e5%92%8b%e5%9c%b0">#</a>
+</h3>
 </article>
  
       
@@ -176,7 +184,11 @@ https://github.com/alex-shpak/hugo-book
   
 <nav id="TableOfContents">
   <ul>
-    <li><a href="#咋地啦">咋地啦</a></li>
+    <li><a href="#咋地啦">咋地啦</a>
+      <ul>
+        <li><a href="#没咋地">没咋地</a></li>
+      </ul>
+    </li>
   </ul>
 </nav>
 
