--- a/public/404.html
+++ b/public/404.html
@@ -9,14 +9,14 @@
 <meta name="color-scheme" content="light dark"><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://example.org/404.html" />
+<meta property="og:url" content="https://yswang837.github.io/404.html" />
 
 <title>404 Page not found | 小钻风</title>
 <link rel="manifest" href="/manifest.json">
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.78166b9d46e23e0ea915cb6887a30b633e7bc4fad10c8b6b9f6fa532271c19ba.js" integrity="sha256-eBZrnUbiPg6pFctoh6MLYz57xPrRDItrn2&#43;lMiccGbo=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.f35cfd3cbc0448d809b7af7709937d1236dfa0d2fc6a9ab09d9c167780715b1a.js" integrity="sha256-81z9PLwESNgJt693CZN9EjbfoNL8apqwnZwWd4BxWxo=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
