--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.caee7fc61792409b29bcfa7d75809d3fe9e2984c11d057933a347445dadcb968.js" integrity="sha256-yu5/xheSQJspvPp9dYCdP&#43;nimEwR0FeTOjR0RdrcuWg=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.993cf4d5af735b3bb1bc613c48b1ab7e5276e98c79673bfca4c60262a99404c5.js" integrity="sha256-mTz01a9zWzuxvGE8SLGrflJ26Yx5Zzv8pMYCYqmUBMU=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
