--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.552321219f5b2f8293bb614a83f6c119a9712a094814a9e0952ded4a61bf63c7.js" integrity="sha256-VSMhIZ9bL4KTu2FKg/bBGalxKglIFKnglS3tSmG/Y8c=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.fae3042a5d8abfd6ba8d82a471dcb2b541752299a0f1204b499aebe2ff65f35b.js" integrity="sha256-&#43;uMEKl2Kv9a6jYKkcdyytUF1Ipmg8SBLSZrr4v9l81s=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
