--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.bf45765444b2f4f7df09cdf0086c636bbf37a9e6e6589bdf7e7f78a70575a3f2.js" integrity="sha256-v0V2VESy9PffCc3wCGxja783qebmWJvffn94pwV1o/I=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.079948236ee8dd488b83ab3ee621c09d4893e925610848c4ae264cfa8ad43fd0.js" integrity="sha256-B5lII27o3UiLg6s&#43;5iHAnUiT6SVhCEjEriZM&#43;orUP9A=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
