--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.ee7804f529fb338d170b1813139828ee5e055acbae1fd24c71b3f295e64381c1.js" integrity="sha256-7ngE9Sn7M40XCxgTE5go7l4FWsuuH9JMcbPyleZDgcE=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.583d53e00bf2155b44a077d09c7beb419a6b4c17b4103006af9538f9ef748230.js" integrity="sha256-WD1T4AvyFVtEoHfQnHvrQZprTBe0EDAGr5U4&#43;e90gjA=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
