--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.35935242578908699f263d2dc2b83272cf5e7d697723138aabe77ac66c727201.js" integrity="sha256-NZNSQleJCGmfJj0twrgycs9efWl3IxOKq&#43;d6xmxycgE=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.478ed3567b52d32fc8b4fdf9d0ac03d63a0b481578537db54108eafd92feb6fd.js" integrity="sha256-R47TVntS0y/ItP350KwD1joLSBV4U321QQjq/ZL&#43;tv0=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
