--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.1818fa5ce0e4f3a822f7ea1e0589f5b14310cea0201739dcaa66d6d90242cea6.js" integrity="sha256-GBj6XODk86gi9&#43;oeBYn1sUMQzqAgFzncqmbW2QJCzqY=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.788deefbefbcf61356b21b3d41190c3b79fbb2277b27da02c283f024f549794a.js" integrity="sha256-eI3u&#43;&#43;&#43;89hNWshs9QRkMO3n7sid7J9oCwoPwJPVJeUo=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
