--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.4e596ebd7b177ed3daa8dbee4f4c9c47541621e21b624cd40be6f7bc0c63da6b.js" integrity="sha256-TlluvXsXftPaqNvuT0ycR1QWIeIbYkzUC&#43;b3vAxj2ms=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.0d184913cb6a6f377676078f241f92c8bace793ef46dce14965d6bef27bfb364.js" integrity="sha256-DRhJE8tqbzd2dgePJB&#43;SyLrOeT70bc4Ull1r7ye/s2Q=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
