--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.1a7486c8e72cf8c8204a7dad10766f987be5f7bf60c00903afc22be6df27660f.js" integrity="sha256-GnSGyOcs&#43;MggSn2tEHZvmHvl979gwAkDr8Ir5t8nZg8=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.f7beed470b104cf72d21d8cb18b40afffaeb6d7186871e26dccd867874b5b656.js" integrity="sha256-977tRwsQTPctIdjLGLQK//rrbXGGhx4m3M2GeHS1tlY=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
