--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.60ff12d839737dd4aee866b0f8dde544657090e2247086aff500361fc68b8519.js" integrity="sha256-YP8S2DlzfdSu6Gaw&#43;N3lRGVwkOIkcIav9QA2H8aLhRk=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.b6e326026d156cf973be99cf46d7dbf1b5097546c773d26bdf71303ed508bc92.js" integrity="sha256-tuMmAm0VbPlzvpnPRtfb8bUJdUbHc9Jr33EwPtUIvJI=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
