软件开发模型

--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.b6e326026d156cf973be99cf46d7dbf1b5097546c773d26bdf71303ed508bc92.js" integrity="sha256-tuMmAm0VbPlzvpnPRtfb8bUJdUbHc9Jr33EwPtUIvJI=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.e2c86a4be0b410b67d92dd836aacfebdfa2438d0ed736c317cfd7051f6a2317e.js" integrity="sha256-4shqS&#43;C0ELZ9kt2Daqz&#43;vfokONDtc2wxfP1wUfaiMX4=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
