--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.4652a84824f11d011cd976252dee375a7880ab31a60ad7c651cff643ad081560.js" integrity="sha256-RlKoSCTxHQEc2XYlLe43WniAqzGmCtfGUc/2Q60IFWA=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.4db57443b907aa3b0c9dffa3a77b9c229b4bd569ea1f865ede35a7247778c30d.js" integrity="sha256-TbV0Q7kHqjsMnf&#43;jp3ucIptL1WnqH4Ze3jWnJHd4ww0=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
