--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.592e230584ccf23a594f5968427b4e8ba17e27a723f6a46526323d0050fc30a2.js" integrity="sha256-WS4jBYTM8jpZT1loQntOi6F&#43;J6cj9qRlJjI9AFD8MKI=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.90be3ba7d77a1bd5fc8df71af46b16b18e31baf7762e5a63f7bab1dca5afcb17.js" integrity="sha256-kL47p9d6G9X8jfca9GsWsY4xuvd2Llpj97qx3KWvyxc=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
