--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.9dee7fc1a6cee95edb316e0d04146c0d742299b71dbe737776723cf8f7c8b369.js" integrity="sha256-ne5/wabO6V7bMW4NBBRsDXQimbcdvnN3dnI8&#43;PfIs2k=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.09df419f9a325e676f9f2a72550d9a0c20340207b1071bb59f3ef3a706f1c49b.js" integrity="sha256-Cd9Bn5oyXmdvnypyVQ2aDCA0AgexBxu1nz7zpwbxxJs=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
