--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.f350d1ad05c23f832e77cf5c972048e604ef1bbf07f133f4fb262e4cca52c8da.js" integrity="sha256-81DRrQXCP4Mud89clyBI5gTvG78H8TP0&#43;yYuTMpSyNo=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.82118f155d11b3bb6dac11cdbf31fe4bdf3f53f5ba1223d79b9eb66c5a525d08.js" integrity="sha256-ghGPFV0Rs7ttrBHNvzH&#43;S98/U/W6EiPXm562bFpSXQg=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
