--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.3c616cf7506f1dd4bf74c2a839f99843ece9c55081d26f1081b7ceb9490a0dd4.js" integrity="sha256-PGFs91BvHdS/dMKoOfmYQ&#43;zpxVCB0m8QgbfOuUkKDdQ=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.51b8e4b98c6c077ac1c0c327991bd80204d1c705e55e7df89707de01eda7568c.js" integrity="sha256-UbjkuYxsB3rBwMMnmRvYAgTRxwXlXn34lwfeAe2nVow=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
