--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@ github: https://github.com/yswang837">
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.168f1ab31081e4195b8bd8b49d569d252e6c10666b1b1acb1b37072401eb44eb.js" integrity="sha256-Fo8asxCB5Blbi9i0nVadJS5sEGZrGxrLGzcHJAHrROs=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.5bc09486d121d377c6ed339c1a08e8c78836b490beea1824123a755f53ff0eef.js" integrity="sha256-W8CUhtEh03fG7TOcGgjox4g2tJC&#43;6hgkEjp1X1P/Du8=" crossorigin="anonymous"></script>
 <link rel="alternate" type="application/rss+xml" href="https://yswang837.github.io/index.xml" title="小钻风" />
 <!--
 Made with Book Theme
