--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.84a06d69bfc7901703790e0836019ad46cf569931376cdba253dcacbf769ffea.js" integrity="sha256-hKBtab/HkBcDeQ4INgGa1Gz1aZMTds26JT3Ky/dp/&#43;o=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.47a3f378e57a9733c5800fb5ed5dd85d3904636381bfa459d44a4c0e1fa7cb00.js" integrity="sha256-R6PzeOV6lzPFgA&#43;17V3YXTkEY2OBv6RZ1EpMDh&#43;nywA=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
