--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.47a3f378e57a9733c5800fb5ed5dd85d3904636381bfa459d44a4c0e1fa7cb00.js" integrity="sha256-R6PzeOV6lzPFgA&#43;17V3YXTkEY2OBv6RZ1EpMDh&#43;nywA=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.77272fcbb9055e82a5bf5a5b1dfa93e889a416a608e18a30c3a6b85885cd1125.js" integrity="sha256-dycvy7kFXoKlv1pbHfqT6ImkFqYI4Yoww6a4WIXNESU=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
