--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.77272fcbb9055e82a5bf5a5b1dfa93e889a416a608e18a30c3a6b85885cd1125.js" integrity="sha256-dycvy7kFXoKlv1pbHfqT6ImkFqYI4Yoww6a4WIXNESU=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.b0072f49a95d4e8a2c288fac2ee0d8789d76d1b38fa21e51395eaa6a5e6e3373.js" integrity="sha256-sAcvSaldToosKI&#43;sLuDYeJ120bOPoh5ROV6qal5uM3M=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
