--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@ github: https://github.com/yswang837">
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.77272fcbb9055e82a5bf5a5b1dfa93e889a416a608e18a30c3a6b85885cd1125.js" integrity="sha256-dycvy7kFXoKlv1pbHfqT6ImkFqYI4Yoww6a4WIXNESU=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.b0072f49a95d4e8a2c288fac2ee0d8789d76d1b38fa21e51395eaa6a5e6e3373.js" integrity="sha256-sAcvSaldToosKI&#43;sLuDYeJ120bOPoh5ROV6qal5uM3M=" crossorigin="anonymous"></script>
 <link rel="alternate" type="application/rss+xml" href="https://yswang837.github.io/index.xml" title="小钻风" />
 <!--
 Made with Book Theme
@@ -410,7 +410,7 @@ https://github.com/alex-shpak/hugo-book
   
 
   
-    <a href="/docs/example/architect-exam/3.9-%E8%BD%AF%E4%BB%B6%E5%B7%A5%E7%A8%8B/7-%E8%BD%AF%E4%BB%B6%E6%B5%8B%E8%AF%95/" class="">7) 软件测试</a>
+    <a href="/docs/example/architect-exam/3.9-%E8%BD%AF%E4%BB%B6%E5%B7%A5%E7%A8%8B/7-%E8%BD%AF%E4%BB%B6%E6%B5%8B%E8%AF%95%E4%B8%8E%E8%B0%83%E8%AF%95/" class="">7) 软件测试与调试</a>
   
 
           
