--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.aa197c94228177431f7ab02a7f1d585ca2b7b8b4dcafaa4b540d4b964b4240c1.js" integrity="sha256-qhl8lCKBd0MferAqfx1YXKK3uLTcr6pLVA1LlktCQME=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.d1ea198d489f13e751c749ad6ffe9e7c070fc8fd590594ad3ca9f7b53bbd44db.js" integrity="sha256-0eoZjUifE&#43;dRx0mtb/6efAcPyP1ZBZStPKn3tTu9RNs=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
