--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.c8bf108aaca19562b2a3745d4afa3241718848922b54f09cab69a8e6877b2afa.js" integrity="sha256-yL8QiqyhlWKyo3RdSvoyQXGISJIrVPCcq2mo5od7Kvo=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.112a4794393e2c1ec5f0ff21885c87524c7893b070e649740e28152ad6a705eb.js" integrity="sha256-ESpHlDk&#43;LB7F8P8hiFyHUkx4k7Bw5kl0DigVKtanBes=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
