--- a/public/404.html
+++ b/public/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 
   <head>
     <meta charset="UTF-8">
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.4a88c0a626e2b89b871c79c671a30dc2a114b52df1f79a6e5bb323472df79765.js" integrity="sha256-SojApibiuJuHHHnGcaMNwqEUtS3x95puW7MjRy33l2U=" crossorigin="anonymous"></script>
+  <script defer src="/zh.search.min.1a4dc6db42352ee77c008349fc3652c70c172f0d6bc9a029d78d0248bdeb0e9d.js" integrity="sha256-Gk3G20I1Lud8AINJ/DZSxwwXLw1ryaAp140CSL3rDp0=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
