--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/zh.search.min.ad49f0375ac0b0768e30aa8046f27225346b88b5b2b54e542bafb1f53a6e836b.js" integrity="sha256-rUnwN1rAsHaOMKqARvJyJTRriLWytU5UK6&#43;x9Tpug2s=" crossorigin="anonymous"></script>
+  <script defer src="/zh.search.min.c916326a28887617e162de5dad07d906781d117cfc289369989bcb8ff3babb95.js" integrity="sha256-yRYyaiiIdhfhYt5drQfZBngdEXz8KJNpmJvLj/O6u5U=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
