--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,17 @@
 微信：wys837
 github: https://github.com/yswang837">
 <meta name="theme-color" content="#FFFFFF">
-<meta name="color-scheme" content="light dark"><meta property="og:title" content="😅" />
+<meta name="color-scheme" content="light dark"><meta property="og:title" content="小钻风" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://yswang837.github.io/" />
 
-<title>😅 | 小钻风</title>
+<title>小钻风 | 小钻风</title>
 <link rel="manifest" href="/manifest.json">
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/zh.search.min.f903cc1d55368db207a4c78643bdda21c4003c116891e2377640a0d2706786b6.js" integrity="sha256-&#43;QPMHVU2jbIHpMeGQ73aIcQAPBFokeI3dkCg0nBnhrY=" crossorigin="anonymous"></script>
+  <script defer src="/zh.search.min.938538695150cc4803539a4b801bbee18907ceb6d384d10e7ef03dc7b43bd1ec.js" integrity="sha256-k4U4aVFQzEgDU5pLgBu&#43;4YkHzrbThNEOfvA9x7Q70ew=" crossorigin="anonymous"></script>
 <link rel="alternate" type="application/rss+xml" href="https://yswang837.github.io/index.xml" title="小钻风" />
 <!--
 Made with Book Theme
@@ -856,7 +856,7 @@ https://github.com/alex-shpak/hugo-book
     <img src="/svg/menu.svg" class="book-icon" alt="Menu" />
   </label>
 
-  <strong>😅</strong>
+  <strong>小钻风</strong>
 
   <label for="toc-control">
     
