--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/zh.search.min.e5b8da6149626f982db4faa6cbd15094d78be0f24bc03b0fbb817f50a957c495.js" integrity="sha256-5bjaYUlib5gttPqmy9FQlNeL4PJLwDsPu4F/UKlXxJU=" crossorigin="anonymous"></script>
+  <script defer src="/zh.search.min.20a7828516f957107de7bb8c975417b6ecada72f1fdbe5fa6284020ac7f2efaa.js" integrity="sha256-IKeChRb5VxB957uMl1QXtuytpy8f2&#43;X6YoQCCsfy76o=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
