--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@ github: https://github.com/yswang837">
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/zh.search.min.9dc78fac5bd7c304a8e8f858b4358af68ac08d02a1e8cbe4ac98de5788efbbe0.js" integrity="sha256-ncePrFvXwwSo6PhYtDWK9orAjQKh6MvkrJjeV4jvu&#43;A=" crossorigin="anonymous"></script>
+  <script defer src="/zh.search.min.004f1cb9b37fd202a79f5b15b90dee1f41c7ec4fec8697d29a87e0cd197abb4a.js" integrity="sha256-AE8cubN/0gKnn1sVuQ3uH0HH7E/shpfSmofgzRl6u0o=" crossorigin="anonymous"></script>
 <link rel="alternate" type="application/rss+xml" href="https://yswang837.github.io/index.xml" title="小钻风" />
 <!--
 Made with Book Theme
