--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/zh.search.min.e656061ad0608aac6bf0966ae546694beb062151abe44640c806f15aebd75893.js" integrity="sha256-5lYGGtBgiqxr8JZq5UZpS&#43;sGIVGr5EZAyAbxWuvXWJM=" crossorigin="anonymous"></script>
+  <script defer src="/zh.search.min.ff7b7655d6c93a4923d2d0730a6c3d230995da30ec147e7071238758145ab781.js" integrity="sha256-/3t2VdbJOkkj0tBzCmw9IwmV2jDsFH5wcSOHWBRat4E=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
