--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/zh.search.min.5a43be10caf46c39e4437d85ca24425bf2ff30f82266136854d120ff75a47df4.js" integrity="sha256-WkO&#43;EMr0bDnkQ32FyiRCW/L/MPgiZhNoVNEg/3WkffQ=" crossorigin="anonymous"></script>
+  <script defer src="/zh.search.min.20fe4fb17d7b05805992951331b2c906aeefdf76b5a9533f0c02717f160a5b5b.js" integrity="sha256-IP5PsX17BYBZkpUTMbLJBq7v33a1qVM/DAJxfxYKW1s=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
