--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/zh.search.min.c9da096122e1317cdd04f4a5a02f0e1296868f337acfe383ba0de9cd1e9aa549.js" integrity="sha256-ydoJYSLhMXzdBPSloC8OEpaGjzN6z&#43;ODug3pzR6apUk=" crossorigin="anonymous"></script>
+  <script defer src="/zh.search.min.ae2e820f84a72cee62293f29a6c4af737c38736e5b1f5b130afc3c6f42f5915f.js" integrity="sha256-ri6CD4SnLO5iKT8ppsSvc3w4c25bH1sTCvw8b0L1kV8=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
