--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/zh.search.min.cb706a2875e9130ce1bb50b37e75ae6551ad4dc54bbaf405221c0fc737d0c1f1.js" integrity="sha256-y3BqKHXpEwzhu1CzfnWuZVGtTcVLuvQFIhwPxzfQwfE=" crossorigin="anonymous"></script>
+  <script defer src="/zh.search.min.33c9e2cf15189245b919103b7b0ce25f9b3ee3027ab4890147c6cdadfe10855a.js" integrity="sha256-M8nizxUYkkW5GRA7ewziX5s&#43;4wJ6tIkBR8bNrf4QhVo=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
