--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/zh.search.min.beffb7bb8e64969313d1bc189104a02a8a2802ad1f7ed47363f5e8e492642f10.js" integrity="sha256-vv&#43;3u45klpMT0bwYkQSgKoooAq0fftRzY/Xo5JJkLxA=" crossorigin="anonymous"></script>
+  <script defer src="/zh.search.min.89d7d5e63c83ed207b7689dbff17743c7823615c94f52acf0b318bcb02d1114a.js" integrity="sha256-idfV5jyD7SB7donb/xd0PHgjYVyU9SrPCzGLywLREUo=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
