--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/zh.search.min.528d7c426ca9a4ce8170f4fc3ada5b0f0e948cbe086e1bcb5eddb0c15a578a81.js" integrity="sha256-Uo18QmyppM6BcPT8OtpbDw6UjL4IbhvLXt2wwVpXioE=" crossorigin="anonymous"></script>
+  <script defer src="/zh.search.min.f4f5b3c68bd329a47b0b72140405be443370e742697d7a4a8961651d9ab9b37f.js" integrity="sha256-9PWzxovTKaR7C3IUBAW&#43;RDNw50JpfXpKiWFlHZq5s38=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
