--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@ github: https://github.com/yswang837">
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/zh.search.min.4295f48d2552bdd9cc701cc419299a3bba2177da0508162b0fab1a6c8849df65.js" integrity="sha256-QpX0jSVSvdnMcBzEGSmaO7ohd9oFCBYrD6sabIhJ32U=" crossorigin="anonymous"></script>
+  <script defer src="/zh.search.min.9a2955a771432d1052e65fa38cde3171820e62e792344161b4dcf22d4a962e14.js" integrity="sha256-milVp3FDLRBS5l&#43;jjN4xcYIOYueSNEFhtNzyLUqWLhQ=" crossorigin="anonymous"></script>
 <link rel="alternate" type="application/rss+xml" href="https://yswang837.github.io/index.xml" title="hello 小代" />
 <!--
 Made with Book Theme
