--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/zh.search.min.2902da5f090f4e6fb31dbbe97980b1e45a5883c38fda2f356aaf563747a2ee91.js" integrity="sha256-KQLaXwkPTm&#43;zHbvpeYCx5FpYg8OP2i81aq9WN0ei7pE=" crossorigin="anonymous"></script>
+  <script defer src="/zh.search.min.ada7e7d561dea58b84580e26033fe44aefd1971c5df42e4592c95a8307860332.js" integrity="sha256-rafn1WHepYuEWA4mAz/kSu/Rlxxd9C5FkslagweGAzI=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
