--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/zh.search.min.a1a69a98cc4b3c474906642efb98007964efd6e5fedc14c9aced3e0948407ae3.js" integrity="sha256-oaaamMxLPEdJBmQu&#43;5gAeWTv1uX&#43;3BTJrO0&#43;CUhAeuM=" crossorigin="anonymous"></script>
+  <script defer src="/zh.search.min.4590f699f85200c87da5fd4a092215d5f8ab1abc727f0b89d7c539720defa48b.js" integrity="sha256-RZD2mfhSAMh9pf1KCSIV1firGrxyfwuJ18U5cg3vpIs=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
