--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/zh.search.min.d6b6516c8f7d7d7a965b63fd7044b47928d555f3ff82dc6bfcd19fee8cd6036f.js" integrity="sha256-1rZRbI99fXqWW2P9cES0eSjVVfP/gtxr/NGf7ozWA28=" crossorigin="anonymous"></script>
+  <script defer src="/zh.search.min.c550dcde808d2f71feda437437eb035e77ba6d9aec20ab31c2957427a4ac201d.js" integrity="sha256-xVDc3oCNL3H&#43;2kN0N&#43;sDXne6bZrsIKsxwpV0J6SsIB0=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
