--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/zh.search.min.33631cecaa1c336e7e7dae1f6f2c830429b89972801429a32d04d3933632ebc3.js" integrity="sha256-M2Mc7KocM25&#43;fa4fbyyDBCm4mXKAFCmjLQTTkzYy68M=" crossorigin="anonymous"></script>
+  <script defer src="/zh.search.min.de26fd8de63f642f6c53ffd19554e0888bd7ffee544817bab5c6a13593ecf7a6.js" integrity="sha256-3ib9jeY/ZC9sU//RlVTgiIvX/&#43;5USBe6tcahNZPs96Y=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
