--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/zh.search.min.0eaad9f5fc45287b44fb7c18b509f2e848e691c26a7bbd9901466910f2cfaa5c.js" integrity="sha256-DqrZ9fxFKHtE&#43;3wYtQny6EjmkcJqe72ZAUZpEPLPqlw=" crossorigin="anonymous"></script>
+  <script defer src="/zh.search.min.f81fab2c836bd5021522d78e7caf16c2fe22eaf5a4306cfddc428f2ebefd941c.js" integrity="sha256-&#43;B&#43;rLINr1QIVIteOfK8Wwv4i6vWkMGz93EKPLr79lBw=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
