--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/zh.search.min.f81fab2c836bd5021522d78e7caf16c2fe22eaf5a4306cfddc428f2ebefd941c.js" integrity="sha256-&#43;B&#43;rLINr1QIVIteOfK8Wwv4i6vWkMGz93EKPLr79lBw=" crossorigin="anonymous"></script>
+  <script defer src="/zh.search.min.c64dcf203dbb5330c277adb865384c64229567a947f3c76368e91ba4cfb99d1b.js" integrity="sha256-xk3PID27UzDCd624ZThMZCKVZ6lH88djaOkbpM&#43;5nRs=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
