--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@ github: https://github.com/yswang837">
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/zh.search.min.2052d8cac6f1c1e25f6487f9f0c66dfdf89e0581486e93555d8c9a0564c852da.js" integrity="sha256-IFLYysbxweJfZIf58MZt/fieBYFIbpNVXYyaBWTIUto=" crossorigin="anonymous"></script>
+  <script defer src="/zh.search.min.38876e8ef3f840905fc7afad3f69557b3f9c51c529be20b7ddfd16fa0b65fb61.js" integrity="sha256-OIdujvP4QJBfx6&#43;tP2lVez&#43;cUcUpviC33f0W&#43;gtl&#43;2E=" crossorigin="anonymous"></script>
 <link rel="alternate" type="application/rss+xml" href="https://yswang837.github.io/index.xml" title="hello 小代" />
 <!--
 Made with Book Theme
