--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@ github: https://github.com/yswang837">
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/zh.search.min.f03c73d3fbaf2ff77bc11e20fb0c68f9bf4729399e6f98844a8e0469dbbf717f.js" integrity="sha256-8Dxz0/uvL/d7wR4g&#43;wxo&#43;b9HKTmeb5iESo4Eadu/cX8=" crossorigin="anonymous"></script>
+  <script defer src="/zh.search.min.02e37b4ce82f05dd211d3a2b87125b9360b9555f2d682807e7cbc4ba49c3cb4a.js" integrity="sha256-AuN7TOgvBd0hHTorhxJbk2C5VV8taCgH58vEuknDy0o=" crossorigin="anonymous"></script>
 <link rel="alternate" type="application/rss+xml" href="https://yswang837.github.io/index.xml" title="hello 小代" />
 <!--
 Made with Book Theme
