--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/zh.search.min.45c16526415ac90166239f9200e68c0baa9eddee3dec270cff57d655f53b124c.js" integrity="sha256-RcFlJkFayQFmI5&#43;SAOaMC6qe3e497CcM/1fWVfU7Ekw=" crossorigin="anonymous"></script>
+  <script defer src="/zh.search.min.c6ea7e378c1a1cdb640901da437cccdc0397616875da9ba27d6b6609d29f542a.js" integrity="sha256-xup&#43;N4waHNtkCQHaQ3zM3AOXYWh12puifWtmCdKfVCo=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
