--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/zh.search.min.c6ea7e378c1a1cdb640901da437cccdc0397616875da9ba27d6b6609d29f542a.js" integrity="sha256-xup&#43;N4waHNtkCQHaQ3zM3AOXYWh12puifWtmCdKfVCo=" crossorigin="anonymous"></script>
+  <script defer src="/zh.search.min.a0ee6a1723b6703743556c79e15b83c9b0a5188b920b521e7799d2e069704f5e.js" integrity="sha256-oO5qFyO2cDdDVWx54VuDybClGIuSC1Ied5nS4GlwT14=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
